<resources>
    <string name="app_name">rtu-ui-components</string>
    <string name="scanbot_sdk_demo">Scanbot SDK Demo</string>
    <string name="no_license_found_the_app_will_terminate_after_one_minute">No license found. The app will terminate after one minute.</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="scan_document">Scan Document</string>
    <string name="import_image">Import Image</string>
    <string name="view_images">View Images</string>
    <string name="data_detectors">Data Detectors</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_mrz">Scan MRZ</string>
    <string name="scan_mrz_image">Scan MRZ + Image</string>
    <string name="scan_mrz_back_and_front_image">Scan MRZ + Back and Front Image</string>
    <string name="scan_bar_code">Scan Bar Code</string>
    <string name="scan_dc_form">Scan DC Form</string>
    <string name="_2018_by_doo_gmbh_all_rights_reserved">© 2018 by doo GmbH. All rights reserved.</string>
    <string name="add_page">ADD PAGE</string>
    <string name="filter">FILTER</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="clean_background_filter">Clean Background Filter</string>
    <string name="color_document_filter">Color Document Filter</string>
    <string name="color_filter">Color Filter</string>
    <string name="grayscale_filter">Grayscale Filter</string>
    <string name="binarizedfilter">Binarized Filter</string>
    <string name="pure_binarized_filter">Pure Binarized Filter</string>
    <string name="black_amp_white_filter"><![CDATA[Black & White Filter]]></string>
    <string name="none">None</string>
    <string name="crop_amp_rotate"><![CDATA[CROP & ROTATE]]></string>
    <string name="delete">DELETE</string>
    <string name="page_title">Page</string>
    <string name="the_demo_expired">The demo app will terminate because of the missing license key. Get your free 30-day license today!</string>
    <string name="demo_expired">Demo Expired</string>
    <string name="save">Save</string>
    <string name="scan_results">Scan Results</string>
</resources>
